# Desafio_2

./: .gitignore.txt  INFORME PRELIMINAR DESAFIO 2.docx
informes/: Informe Desafio 2.docx
mundial/: CMakeLists.txt  grupo.cpp  grupo.h  jugador.cpp  jugador.h  main.cpp  manager.cpp  manager.h  partido.cpp  partido.h  seleccion.cpp  seleccion.h  torneo.cpp  torneo.h
